feat: mais exemplos usando nativo